--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 commands.cmd
-azuredeploy_dev.parameters.json
+lab/azuredeploy_dev.parameters.json
+vm/azuredeploy_dev.parameters.json
 \.vscode/*
+Pipfile.lock
