--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,5 @@
+variables:
+- group: demo-vm-deploy
 
 trigger:
 - master
@@ -16,7 +18,8 @@ stages:
     - task: AzureCLI@2
       displayName: 'validate'
       inputs:
-        azureSubscription: 'azure-poc-subscription'
+        azureSubscription: $(subscription) 
+        scriptType: bash
         scriptLocation: inlineScript
         inlineScript: |
           az --version
