--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ stages:
     - task: AzureCLI@2
       displayName: 'validate'
       inputs:
-        azureSubscription: $(subscription) 
+        azureSubscription: $(azureSubscription) 
         scriptType: bash
         scriptLocation: inlineScript
         inlineScript: |
