Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,4 +22,5 @@ stages:
         scriptType: bash
         scriptLocation: inlineScript
         inlineScript: |
-          az --version
+          az group deployment validate --resource-group $(resourceGroupName) --template-file $(Build.SourcesDirectory)/lab/azuredeploy.json
+          az group deployment validate --resource-group $(resourceGroupName) --template-file $(Build.SourcesDirectory)/vm/azuredeploy.json
