--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,3 +25,31 @@ stages:
           az group deployment validate --resource-group $(testResourceGroupName) --template-file $(Build.SourcesDirectory)/lab/azuredeploy.json --parameters @$(Build.SourcesDirectory)/lab/azuredeploy.parameters.json --mode Complete
           az group deployment validate --resource-group $(testResourceGroupName) --template-file $(Build.SourcesDirectory)/vm/azuredeploy.json --parameters @$(Build.SourcesDirectory)/vm/azuredeploy.parameters.json --mode Complete
           az group deployment validate --resource-group $(testResourceGroupName) --template-file $(Build.SourcesDirectory)/env/PresalesDemo/azuredeploy.json --parameters @$(Build.SourcesDirectory)/env/PresalesDemo/azuredeploy.parameters.json --mode Complete
+
+
+    - task: AzureResourceGroupDeployment@2
+      displayName: test deployment
+      inputs:
+        azureSubscription: $(testAzureConnection)
+        #action: 'Create Or Update Resource Group' # Options: create Or Update Resource Group, select Resource Group, start, stop, stopWithDeallocate, restart, delete, deleteRG
+        resourceGroupName: $(testResourceGroupName)
+        #location: # Required when action == Create Or Update Resource Group
+        templateLocation: 'Linked artifact' # Options: linked Artifact, uRL Of The File
+        #csmFileLink: # Required when templateLocation == URL Of The File
+        #csmParametersFileLink: # Optional
+        csmFile: $(Build.SourcesDirectory)/lab/azuredeploy.json # Required when  TemplateLocation == Linked Artifact
+        #csmParametersFile: # Optional
+        #overrideParameters: # Optional
+        deploymentMode: 'Validation' # Options: Incremental, Complete, Validation
+        #enableDeploymentPrerequisites: 'None' # Optional. Options: none, configureVMwithWinRM, configureVMWithDGAgent
+        #teamServicesConnection: # Required when enableDeploymentPrerequisites == ConfigureVMWithDGAgent
+        #teamProject: # Required when enableDeploymentPrerequisites == ConfigureVMWithDGAgent
+        #deploymentGroupName: # Required when enableDeploymentPrerequisites == ConfigureVMWithDGAgent
+        #copyAzureVMTags: true # Optional
+        #runAgentServiceAsUser: # Optional
+        #userName: # Required when enableDeploymentPrerequisites == ConfigureVMWithDGAgent && RunAgentServiceAsUser == True
+        #password: # Optional
+        #outputVariable: # Optional
+        #deploymentName: # Optional
+        #deploymentOutputs: # Optional
+        #addSpnToEnvironment: false # Optional
