--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,4 +44,39 @@ stages:
         csmFile: $(Build.SourcesDirectory)/env/PresalesDemo/azuredeploy.json # Required when  TemplateLocation == Linked Artifact
         csmParametersFile: $(Build.SourcesDirectory)/env/PresalesDemo/azuredeploy.parameters.json # Optional
         deploymentMode: 'Validation' # Options: Incremental, Complete, Validation
-  
+
+  - job: test
+    pool:
+      vmImage: 'ubuntu-latest'
+
+    steps:
+    - task: AzureResourceGroupDeployment@2
+      displayName: deploy lab to test
+      inputs:
+        azureSubscription: $(testAzureConnection)
+        resourceGroupName: $(testResourceGroupName)
+        templateLocation: 'Linked artifact' # Options: linked Artifact, uRL Of The File
+        csmFile: $(Build.SourcesDirectory)/lab/azuredeploy.json # Required when  TemplateLocation == Linked Artifact
+        csmParametersFile: $(Build.SourcesDirectory)/lab/azuredeploy.parameters.json # Optional
+        deploymentMode: 'Complete' # Options: Incremental, Complete, Validation
+
+#    - task: AzureResourceGroupDeployment@2
+#      displayName: validate vm template
+#      inputs:
+#        azureSubscription: $(testAzureConnection)
+#        resourceGroupName: $(testResourceGroupName)
+#        templateLocation: 'Linked artifact' # Options: linked Artifact, uRL Of The File
+#        csmFile: $(Build.SourcesDirectory)/vm/azuredeploy.json # Required when  TemplateLocation == Linked Artifact
+#        csmParametersFile: $(Build.SourcesDirectory)/vm/azuredeploy.parameters.json # Optional
+#        deploymentMode: 'Validation' # Options: Incremental, Complete, Validation
+#
+#    - task: AzureResourceGroupDeployment@2
+#      displayName: validate env template
+#      inputs:
+#        azureSubscription: $(testAzureConnection)
+#        resourceGroupName: $(testResourceGroupName)
+#        templateLocation: 'Linked artifact' # Options: linked Artifact, uRL Of The File
+#        csmFile: $(Build.SourcesDirectory)/env/PresalesDemo/azuredeploy.json # Required when  TemplateLocation == Linked Artifact
+#        csmParametersFile: $(Build.SourcesDirectory)/env/PresalesDemo/azuredeploy.parameters.json # Optional
+#        deploymentMode: 'Validation' # Options: Incremental, Complete, Validation
+    
