--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,6 +50,7 @@ stages:
   condition: succeeded()
   jobs:
     - deployment: deployUAT
+      environment: uat
       pool:
         vmImage: 'ubuntu-latest'
       strategy:
