--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,34 +43,33 @@ stages:
         csmFile: $(Build.SourcesDirectory)/Environments/PresalesDemo/azuredeploy.json
         csmParametersFile: $(Build.SourcesDirectory)/Environments/PresalesDemo/azuredeploy.parameters.json
         deploymentMode: 'Validation'
-
+    - publish: $(Build.SourcesDirectory)
+      artifact: drop
+      displayName: Publish all sources
 - stage: DeployUAT
   displayName: Deploy to UAT
   dependsOn: Build
   condition: succeeded()
   jobs:
     - deployment: deployUAT
-      environment: prod
+      environment: uat
       pool:
         vmImage: 'ubuntu-latest'
       strategy:
         runOnce:
           deploy:
             steps:
-            - bash: |
-                ls
-                pwd
-                ls $(Build.SourcesDirectory)
-                ls $(Build.SourcesDirectory)/lab
-                echo $(Build.SourcesDirectory)
+            - download: current
+              artifact: drop
+              displayName: Download sources
             - task: AzureResourceGroupDeployment@2
               displayName: deploy lab to test
               inputs:
                 azureSubscription: $(testAzureConnection)
                 resourceGroupName: $(testResourceGroupName)
                 templateLocation: 'Linked artifact'
-                csmFile: $(Build.SourcesDirectory)/lab/azuredeploy.json
-                csmParametersFile: $(Build.SourcesDirectory)/lab/azuredeploy.parameters.json
+                csmFile: $(Pipeline.Workspace)/drop/lab/azuredeploy.json
+                csmParametersFile: $(Pipeline.Workspace)/drop/lab/azuredeploy.parameters.json
                 deploymentMode: 'Incremental'
                 overrideParameters: -tenantId $(tenantId) -objectId $(objectId) -gitToken $(githubToken) -projectName "dsftest"
 
@@ -87,14 +86,17 @@ stages:
         runOnce:
           deploy:
             steps:
+            - download: current
+              artifact: drop
+              displayName: Download sources
             - task: AzureResourceGroupDeployment@2
               displayName: deploy lab to test
               inputs:
                 azureSubscription: $(prodAzureConnection)
                 resourceGroupName: $(prodResourceGroupName)
                 templateLocation: 'Linked artifact'
-                csmFile: $(Build.SourcesDirectory)/lab/azuredeploy.json
-                csmParametersFile: $(Build.SourcesDirectory)/lab/azuredeploy.parameters.json
+                csmFile: $(Pipeline.Workspace)/drop/lab/azuredeploy.json
+                csmParametersFile: $(Pipeline.Workspace)/drop/lab/azuredeploy.parameters.json
                 deploymentMode: 'Incremental'
                 overrideParameters: -tenantId $(tenantId) -objectId $(objectId) -gitToken $(githubToken) -projectName "dsf"
               
