--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,7 +75,7 @@ stages:
 - stage: DeployProd
   displayName: Deploy to Prod
   dependsOn: DeployUAT
-  condition: and( succeeded(), eq( System.PullRequest.TargetBranch, 'refs/heads/master'), eq( Build.Reason, 'PullRequest') ))
+  condition: and( succeeded(), eq( $(Build.SourceBranchName), 'master') ))
   jobs:
     - deployment: deployProd
       environment: prod
