--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,6 @@ variables:
 trigger:
   - andrei
   - stefan
-  - master
 
 stages:
 - stage: Build
@@ -76,7 +75,7 @@ stages:
 - stage: DeployProd
   displayName: Deploy to Prod
   dependsOn: DeployUAT
-  condition: and( succeeded(), eq( $(Build.SourceBranchName), 'master') ))
+  condition: and( succeeded(), eq( $(system.pullRequest.targetBranch), 'refs/heads/master'), eq( $(Build.Reason), 'PullRequest') )
   jobs:
     - deployment: deployProd
       environment: prod
