--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -75,7 +75,7 @@ stages:
 - stage: DeployProd
   displayName: Deploy to Prod
   dependsOn: DeployUAT
-  condition: and( succeeded(),eq( variables[system.pullRequest.targetBranch], 'refs/heads/master'), eq( variables[Build.Reason], 'PullRequest'))
+  condition: and( succeeded(),eq( variables['system.pullRequest.targetBranch'], 'refs/heads/master'), eq( variables['Build.Reason'], 'PullRequest'))
   jobs:
     - deployment: deployProd
       environment: prod
